--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <body>
   <div id="root"></div>
+  <script type="module" src="/src/scripts/HackTimer.js"></script>
+  <script type="module" src="/src/scripts/HackTimerWorker.js"></script>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
