--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="manifest" href="/manifest.json" />
+  <script>navigator.serviceWorker.register("service-worker.js")</script> 
   <title>Clock app | Vaultoniq</title>
 </head>
 
@@ -15,6 +17,7 @@
   <div id="root"></div>
   <script type="module" src="/src/scripts/HackTimer.js"></script>
   <script type="module" src="/src/scripts/HackTimerWorker.js"></script>
+  <script type="module" src="/@vite/client"></script> 
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
