--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="root"></div>
   <script type="module" src="/src/scripts/HackTimer.js"></script>
   <script type="module" src="/src/scripts/HackTimerWorker.js"></script>
-  <script type="module" src="/@vite/client"></script> 
+  <!-- <script type="module" src="/@vite/client"></script>  -->
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
